# examples

./: .gitignore  README.md
california-housing/: .gitignore  README.md  image_name.txt
california-housing/deployment/: README.md  docker-compose.yml  input.json  main.py  model_card.md
california-housing/notebooks/: 01-initial-data-prep.ipynb  02-train-pipeline.ipynb  03-model-inference.ipynb
california-housing/training/: local.test.Dockerfile  pipeline-local.py  pipeline.py  train-pipeline.yaml  train-requirements.txt
gradio-app-highwind-example/: README.md  demo.py  hello_world.py  requirements.txt
helsinki-nlp-opus-mt-en-fr/: README.md
helsinki-nlp-opus-mt-en-fr/deployment/: README.md  docker-compose.yml  input.json  (+2 more)
iris-classification/: .gitignore  README.md
knn-banking-product-recommender/: .gitignore  README.md  common-banking-dataset-fields.txt  requirements.txt
llm-ollama-phi3/: .gitignore  README.md
machine-translation/: .gitattributes  README.md
machine-translation/deployment/: .gitignore  Dockerfile  README.md  docker-compose.yml  inference-service.yml  input.json  main.py  pyproject.toml
machine-translation/training/: .gitignore  Dockerfile  README.md  data_prep.py  kfp_config.ini  machine_translation_training_pipeline.yaml  model_evaluation.py  model_training.py  pipeline-local.py  pipeline.py  pyproject.toml  runtime-requirements.txt
machine-translation/training/component_metadata/: ml_process.yaml
templates/: README.md
translate-dyu-fr-hugging-face/: .gitignore  README.md
translate-dyu-fr-joyenmt/: .gitignore  README.md
(+89 files in other folders)
